--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <com.github.onlynight.chatimageview.ChatImageView
+            <com.github.onlynight.shapedimageview.ChatImageView
                 android:id="@+id/chatImageView"
                 android:layout_width="200dp"
                 android:layout_height="150dp"
@@ -39,7 +39,7 @@
                 app:sharp_corner_start="20dp"
                 app:sharp_corner_width="8dp"/>
 
-            <com.github.onlynight.chatimageview.ChatImageView
+            <com.github.onlynight.shapedimageview.ChatImageView
                 android:layout_width="200dp"
                 android:layout_height="150dp"
                 android:layout_marginTop="100dp"
